--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.0",
     "uuid": "^9.0.1",
